# termipod

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  NOTICE  README.ja.md  README.md  README.zh.md  SECURITY.md  analysis_options.yaml  dart_test.yaml  pubspec.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-task.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  desktop-electron-release.yml  desktop-release.yml  desktop.yml  release-ios.yml  release-server.yml  release.yml
android/app/: build.gradle.kts
design-tokens/: README.md  build.mjs  tokens.json
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/electron/: .gitignore  README.md  electron-builder.yml  esbuild.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
desktop/public/: theme-init.js
desktop/scripts/: sync-excalidraw-assets.mjs  sync-model-explorer-assets.mjs  sync-treesitter-assets.mjs
desktop/src/: App.tsx  main.tsx  nativeContextMenu.ts  platform.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  generate-icons.mjs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: docfile.rs  drawio.rs  foldersync.rs  handoff.rs  keychain.rs  lib.rs  local_agent.rs  localfs.rs  main.rs  migration.rs  net.rs  pty.rs  s3.rs  script.rs  ssh.rs  storage.rs  vault.rs  voice.rs  webdav.rs  workspace.rs  workspacefs.rs
desktop/vault-core/: Cargo.toml
desktop/vault-core/src/: lib.rs
desktop/vault-wasm/: Cargo.toml
desktop/vault-wasm/src/: lib.rs
docs/: README.md  agent-fleet.md  agent-harness.md  agent-protocol-roles.md  blueprint.md  changelog-desktop.md  changelog.md  code-as-artifact.md  doc-spec.md  hub-agents.md  hub-host-setup.md  hub-mobile-test.md  ia-redesign.md  mock-demo-walkthrough.md  monolith-refactor-plan.md  positioning.md  post-mvp-domain-packs.md  release-test-plan.md  research-demo-candidates.md  research-demo-gaps.md  roadmap.md  steward-sessions.md  ux-steward-audit.md  vocab-audit.md
docs/archive/: tmux-mobile-design-v2.md  working-pane.md
docs/decisions/: 001-locked-candidate-a.md  002-mcp-consolidation.md  003-a2a-relay-required.md  004-single-steward-mvp.md  005-owner-authority-model.md  006-cache-first-cold-start.md  007-mcp-vs-a2a-protocol-roles.md  008-orchestrator-worker-slice.md  009-agent-state-and-identity.md  010-frame-profiles-as-data.md  011-turn-based-attention-delivery.md  012-codex-app-server-integration.md  013-gemini-exec-per-turn.md  014-claude-code-resume-cursor.md  015-fork-detach-and-rebrand.md  016-subagent-scope-manifest.md  017-layered-stewards.md  018-tailnet-deployment-assumption.md  019-channels-as-event-log.md  020-director-action-surface.md  021-acp-capability-surface.md  022-observability-surfaces.md  023-agent-driven-mobile-ui.md  024-project-detail-chassis.md  025-project-steward-accountability.md  026-kimi-code-engine.md  027-local-log-tail-driver.md  028-host-control-via-tunnel-and-cli.md  029-tasks-as-first-class-primitive.md  030-governed-actions-and-propose-verb.md  031-agent-tool-ergonomics.md  032-message-routing-envelope.md  033-tool-catalog-naming-and-registration.md  034-orchestration-loop-closure.md  035-antigravity-engine-m4-locallogtail.md  036-claude-code-statusline-telemetry.md  037-multi-team-isolation-and-operator-principal-split.md  038-per-run-event-digest.md  039-insight-lens-as-server-query.md  040-transcript-surfaces-decoupled-by-mode.md  (+16 more)
docs/discussions/: agent-driven-mobile-ui.md  agent-driven-system-probing.md  agent-execution-reliability-and-failure-caps.md  agent-feed-decomposition.md  agent-fleet.md  agent-infra-tooling-landscape.md  agent-protocol-roles.md  agent-side-tooling-landscape.md  agent-skills-and-memory-management.md  agent-state-and-identity.md  agent-tool-ergonomics.md  ai-native-codebase-legibility.md  aip-acps-china-standard.md  antigravity-statusline-research.md  attention-interaction-model.md  author-agent-assist-and-diagrams.md  auto-notification-coverage.md  code-as-artifact.md  code-building-fitness.md  code-native-hub.md  codex-m2-app-server-surface-audit.md  codex-m4-research.md  consumer-side-dispatch-contracts.md  coordination-basis-and-decision-classification.md  design-system-enforcement.md  desktop-and-web-targets.md  desktop-breakglass-ssh.md  desktop-design-review.md  desktop-professional-terminal.md  desktop-research-surface.md  dinotty-vt-screen.md  doc-freshness-maintenance.md  embodied-ai-research-workbench.md  embodied-ai-tooling-landscape.md  engine-launch-contract.md  external-agent-services.md  feedback-loop-closure.md  figure-and-diagram-tooling-landscape.md  fork-and-engine-context-mutations.md  governed-actions-and-propose-verb.md  (+55 more)
docs/how-to/: agent-collaboration.md  export-traces-to-otlp.md  install-host-runner.md  install-hub-server.md  local-dev-environment.md  localize-a-string.md  release-testing.md  report-an-issue.md  run-lifecycle-demo.md  run-tests.md  run-the-demo.md  surface-run-metrics.md  test-agent-driven-prototype.md  test-steward-lifecycle.md
docs/plans/: acp-capability-surface.md  adaptive-project-lifecycle.md  agent-artifact-rendering-tier-1.md  agent-events-shared-provider.md  agent-feed-split.md  agent-run-analysis-mode.md  agent-state-and-identity.md  agent-tool-ergonomics-rollout.md  agent-transcript-debug-and-header-parity.md  artifact-type-registry.md  (+64 more)
hub/: .gitignore  go.mod  go.sum  hub.go
hub-tui/: .gitignore  README.md  package.json  tsconfig.json
lib/: main.dart
scripts/: agent-poller.sh  design-token-baseline.txt  desktop-token-baseline.txt  hardcoded-strings-baseline.txt  legacy-marker-baseline.txt  lint-arb.sh  lint-design-tokens.sh  lint-desktop-tokens.sh  lint-doc-anchors.sh  lint-docs.sh  lint-glossary.sh  lint-governed-actions.sh  lint-hardcoded-strings.sh  lint-legacy-markers.sh  lint-openapi.sh  lint-templates.sh  lint-vocab.sh  measure-event-rate.sh  setup-agent-labels.sh
test/: widget_test.dart
(+1687 files in other folders)
