[package]
name = "termipod-desktop"
version = "0.2.1"
description = "TermiPod desktop control plane"
authors = ["TermiPod"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "termipod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids a system OpenSSL dependency in CI.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Breakglass SSH terminal (ADR-052, personal direct-SSH path). russh is pure
# Rust (no cgo/OpenSSL); tokio drives the per-session PTY actor.
russh = "0.62"
tokio = { version = "1", features = ["macros", "sync", "io-util", "net", "time", "rt-multi-thread"] }
# In-app auto-update: check a signed latest.json on the GitHub release, download
# + install, then relaunch. Signing is mandatory (pubkey in tauri.conf.json).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
