[package]
name = "termipod-desktop"
version = "0.2.2"
description = "TermiPod desktop control plane"
authors = ["TermiPod"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "termipod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids a system OpenSSL dependency in CI.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Breakglass SSH terminal (ADR-052, personal direct-SSH path). russh is pure
# Rust (no cgo/OpenSSL); tokio drives the per-session PTY actor.
russh = "0.62"
tokio = { version = "1", features = ["macros", "sync", "io-util", "net", "time", "rt-multi-thread"] }
# In-app auto-update: check a signed latest.json on the GitHub release, download
# + install, then relaunch. Signing is mandatory (pubkey in tauri.conf.json).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# OS keychain for all desktop secrets (SSH passwords/keys/passphrases, vault
# material) — Windows Credential Manager / macOS Keychain / Linux Secret
# Service. default-features off + the zbus (pure-Rust) secret-service backend so
# the Linux build links no libdbus/libsecret system library in CI.
keyring = { version = "4", default-features = false, features = [
    "v1",
    "windows-native-keyring-store",
    "apple-native-keyring-store",
    "zbus-secret-service-keyring-store",
] }
# Zero-knowledge vault crypto (ADR-052 D-3/D-4) — a byte-for-byte port of the
# mobile vault_crypto.dart so connections/keys sync across devices. All pure
# Rust (no system crypto libs): AES-256-GCM bundle, ephemeral-X25519 + HKDF
# device wrap, Argon2id recovery wrap.
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2"
