[package]
name = "termipod-desktop"
version = "0.3.31"
description = "TermiPod desktop control plane"
authors = ["TermiPod"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "termipod_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids a system OpenSSL dependency in CI.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Extract the optional draw.io webapp (a .war = zip) into app-data for offline
# diagram editing (J2 Author `diagram` docs). Not bundled in the installer; the
# user downloads it once via a button (drawio.rs).
zip = { version = "2", default-features = false, features = ["deflate"] }
# Breakglass SSH terminal (ADR-052, personal direct-SSH path). russh is pure
# Rust (no cgo/OpenSSL); tokio drives the per-session PTY actor.
russh = "0.62"
# SFTP file transfer (parity — mobile sftp_service.dart) over the same russh
# session: opens an `sftp` subsystem channel and speaks the SFTP protocol.
russh-sftp = "2"
# Local shells for the terminal dock (professional-terminal, → ADR-053). wezterm's
# cross-platform PTY layer — spawns a native login shell on the user's own machine
# (the desktop's "empower the user" lever beyond mobile's SSH-only story). Pure
# Rust; no system deps in CI.
portable-pty = "0.9"
tokio = { version = "1", features = ["macros", "sync", "io-util", "net", "time", "rt-multi-thread", "process"] }
# Voice dictation (parity — mobile cloud_stt.dart): a WebSocket bridge to
# DashScope realtime ASR. The webview WebSocket can't set the Authorization
# header DashScope needs, so the socket lives here. rustls (no system OpenSSL) to
# match reqwest and keep CI free of native TLS libs.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"
# In-app auto-update: check a signed latest.json on the GitHub release, download
# + install, then relaunch. Signing is mandatory (pubkey in tauri.conf.json).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Native folder picker for the Zotero storage/ link (J1 Read). Only the Rust core
# uses it (custom `storage_pick_folder` command), so no JS plugin package is
# added — the picked absolute path is persisted by the frontend so the link
# survives a restart (director report: the link was lost on reopen).
tauri-plugin-dialog = "2"
# OS keychain for all desktop secrets (SSH passwords/keys/passphrases, vault
# material) — Windows Credential Manager / macOS Keychain / Linux Secret
# Service. default-features off + the zbus (pure-Rust) secret-service backend so
# the Linux build links no libdbus/libsecret system library in CI.
keyring = { version = "4", default-features = false, features = [
    "v1",
    "windows-native-keyring-store",
    "apple-native-keyring-store",
    "zbus-secret-service-keyring-store",
] }
# keyring 4.1.3 never registers a default credential store at runtime — its lazy
# initializer (`v1::Entry::new`) is guarded by `compare_exchange(false, true, …)
# == Ok(true)`, but a *successful* CAS returns `Ok(false)`, so the guard never
# fires and every `Entry` call fails with "No default store has been set". We
# register the platform-native store ourselves at startup
# (`keychain::init_default_store`). keyring-core + the store crates below are the
# same versions/cfgs keyring itself depends on, so cargo unifies them onto
# keyring's single keyring-core (one shared default-store registry).
keyring-core = "1"
# Zero-knowledge vault crypto (ADR-052 D-3/D-4) — a byte-for-byte port of the
# mobile vault_crypto.dart so connections/keys sync across devices. All pure
# Rust (no system crypto libs): AES-256-GCM bundle, ephemeral-X25519 + HKDF
# device wrap, Argon2id recovery wrap.
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2"

# Platform credential-store backends, referenced directly by
# keychain::init_default_store to register keyring-core's default store. Same
# crates/versions/target-cfgs keyring 4.1.3 uses internally (so they unify).
[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
