[package]
name = "vault-core"
version = "0.1.0"
edition = "2021"
description = "TermiPod zero-knowledge vault crypto — byte-compatible with the mobile Dart vault and src-tauri/src/vault.rs. Pure Rust (no Tauri, no WASM), so it compiles for the native test target AND, via the sibling vault-wasm crate, to WASM for the Electron shell (ADR-055 M2.6, D-3)."

[lib]
# rlib so the sibling vault-wasm crate can depend on it by path.
crate-type = ["rlib"]

[dependencies]
# Versions MUST match src-tauri/Cargo.toml exactly so the crypto is byte-identical
# (the whole point of D-3: compile the SAME crypto, don't reimplement it).
aes-gcm = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand_core = { version = "0.6", features = ["getrandom"] }
data-encoding = "2"
