[package]
name = "vault-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM build of the TermiPod vault crypto (ADR-055 M2.6 / D-3). Thin wasm-bindgen wrappers over the pure `vault-core` crate — same crypto the Tauri build and the mobile Dart client use — so the Electron main process can seal/open/wrap the SAME vault bundle byte-for-byte. Built with `wasm-pack build --target nodejs`."

[lib]
crate-type = ["cdylib"]

[dependencies]
vault-core = { path = "../vault-core" }
wasm-bindgen = "0.2"
# vault-core's OsRng → getrandom 0.2 (via rand_core 0.6). The `js` feature routes
# it to the host's Web Crypto (globalThis.crypto) under wasm32 — required for the
# nodejs target to seed keys/nonces. Feature-unifies with the transitive dep.
getrandom = { version = "0.2", features = ["js"] }
